--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
 
 plugins {
-      id "org.sonarqube" version "2.2.1"
+      id "org.sonarqube" version "2.6.2"
 }
 
 apply plugin: 'com.github.ben-manes.versions'
@@ -193,4 +193,22 @@ task zip(dependsOn: copyToLib, type: Zip) {
 
 task(outputDependencies) doLast {
     println "ida_utils="+dependencyVersions.ida_utils
+}
+
+jar {
+    def manifestClasspath = configurations.runtime.collect { 'lib/' + it.getName() }.join(' ')
+    def buildNumber = System.getenv('BUILD_NUMBER')
+    def gitCommit = System.getenv('GIT_COMMIT')
+
+    manifest {
+        attributes(
+                'Main-Class': mainClassName,
+                'Class-Path': manifestClasspath,
+                'Build-Number': buildNumber != null ? buildNumber : '',
+                'Version-Number': project.version,
+                'Git-Commit': gitCommit != null ? gitCommit : '',
+                'Build-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm'Z'"))
+    }
+
+    destinationDir = file("$buildDir/output")
 }
