EID-1089: Uplift Hub to Java 11
Uplift to Gradle 4.10.2 in verify-test-rp.
Include additional jars in the build script to avoid supplying --add-modules on startup for > Java 9.
Java 8 and 10 both supported.
Java 11 is not supported if tests need to run.
This change allows test-rp to start in Java 10 or 11 in order to test hub end-to-end.

--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,9 @@ dependencies {
             'org.slf4j:slf4j-api:1.7.10',
             //need this to be fixed - https://github.com/Squarespace/jersey2-guice/pull/39
             'com.hubspot.dropwizard:dropwizard-guicier:1.0.0.6',
-            'com.squarespace.jersey2-guice:0-jersey2-guice-spi:1.0.6'
+            'com.squarespace.jersey2-guice:0-jersey2-guice-spi:1.0.6',
+            'javax.activation:javax.activation-api:1.2.0',
+            'javax.xml.bind:jaxb-api:2.2.3'
 
     dropwizard 'io.dropwizard:dropwizard-core:' + dependencyVersions.dropwizard,
             'io.dropwizard:dropwizard-client:' + dependencyVersions.dropwizard,
