--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,12 @@ env:
   - VERIFY_USE_PUBLIC_BINARIES=true
 jdk:
   - oraclejdk8
-  - oraclejdk9
-  - oraclejdk10
   - openjdk8
-  - openjdk9
   - openjdk10
   - openjdk11
 matrix:
+  fast_finish: true
   allow_failures:
-  - jdk: oraclejdk9
-  - jdk: oraclejdk10
-  - jdk: openjdk9
   - jdk: openjdk10
   - jdk: openjdk11
 before_cache:
