--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,12 @@ buildscript {
 apply plugin: 'com.github.ben-manes.versions'
 
 group = "uk.gov.ida"
-version = "0.1.$version"
 
 apply from: 'idea.gradle'
 apply plugin: 'idea'
 
 apply plugin: 'java'
 apply plugin: 'jacoco'
-apply plugin: 'idaJar'
 apply plugin: 'idea'
 apply plugin: 'application'
 
@@ -41,6 +39,26 @@ repositories {
     }
     else {
         maven { url 'https://artifactory.ida.digital.cabinet-office.gov.uk/artifactory/whitelisted-repos' }
+    }
+}
+
+ext.mainclass = 'uk.gov.ida.rp.testrp.TestRpApplication'
+mainClassName = ext.mainclass
+
+distZip {
+    into(project.name + '/truststores') {
+        from 'src/main/resources'
+        include '*.ts'
+    }
+    into(project.name) {
+        from 'configuration'
+        include 'test-rp.yml'
+    }
+
+    def versionedPath = archivePath
+    version = null
+    doLast {
+        archivePath.renameTo(versionedPath)
     }
 }
 
@@ -186,39 +204,3 @@ task intTest(type: Test) {
 }
 
 tasks.check.dependsOn(intTest)
-
-ext.mainclass = 'uk.gov.ida.rp.testrp.TestRpApplication'
-mainClassName = ext.mainclass
-
-jar.baseName = 'ida-sample-rp'
-
-task copyToLib(dependsOn: jar, type: Copy) {
-    into "$buildDir/output/lib"
-    from configurations.runtime
-}
-
-task zip(dependsOn: copyToLib, type: Zip) {
-    from "$buildDir/output"
-}
-
-task(outputDependencies) doLast {
-    println "ida_utils="+dependencyVersions.ida_utils
-}
-
-jar {
-    def manifestClasspath = configurations.runtime.collect { 'lib/' + it.getName() }.join(' ')
-    def buildNumber = System.getenv('BUILD_NUMBER')
-    def gitCommit = System.getenv('GIT_COMMIT')
-
-    manifest {
-        attributes(
-                'Main-Class': mainClassName,
-                'Class-Path': manifestClasspath,
-                'Build-Number': buildNumber != null ? buildNumber : '',
-                'Version-Number': project.version,
-                'Git-Commit': gitCommit != null ? gitCommit : '',
-                'Build-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm'Z'"))
-    }
-
-    destinationDir = file("$buildDir/output")
-}
