Bau - Upgrade to gradle 5 and enable test-rp to run on jdk11
- Allow failures on jdk11, due to a bug in jdk11 which will be resolved
in the next jdk release. https://bugs.openjdk.java.net/browse/JDK-8210005
- The JAXB APIs have been completely removed from the JDK in Java 11
so add JAX-B API as a dependency.

--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,10 @@ dependencies {
             'org.slf4j:slf4j-api:1.7.10',
             //need this to be fixed - https://github.com/Squarespace/jersey2-guice/pull/39
             'com.hubspot.dropwizard:dropwizard-guicier:1.0.0.6',
-            'com.squarespace.jersey2-guice:0-jersey2-guice-spi:1.0.6'
+            'com.squarespace.jersey2-guice:0-jersey2-guice-spi:1.0.6',
+            'javax.xml.bind:jaxb-api:2.3.1',
+            'com.sun.xml.bind:jaxb-core:2.3.0.1',
+            'com.sun.xml.bind:jaxb-impl:2.3.0'
 
     dropwizard 'io.dropwizard:dropwizard-core:' + dependencyVersions.dropwizard,
             'io.dropwizard:dropwizard-client:' + dependencyVersions.dropwizard,
@@ -181,7 +184,7 @@ sourceSets {
 }
 
 task intTest(type: Test) {
-    testClassesDir = sourceSets.integrationTest.output.classesDir
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath += sourceSets.integrationTest.runtimeClasspath
 }
 
