--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         if (System.getenv('VERIFY_USE_PUBLIC_BINARIES') == 'true') {
             logger.warn('Production builds MUST NOT be built with public binaries.\nUse artifactory/whitelisted-repos for production builds.\n\n')
             maven { url 'https://dl.bintray.com/alphagov/maven-test' }
+            maven { url 'https://build.shibboleth.net/nexus/content/repositories/releases' }
             jcenter()
         }
         else {
@@ -37,6 +38,7 @@ repositories {
         logger.warn('Production builds MUST NOT be built with public binaries.\nUse artifactory/whitelisted-repos for production builds.\n\n')
         maven { url 'https://dl.bintray.com/alphagov/maven' } // For dropwizard-logstash
         maven { url 'https://dl.bintray.com/alphagov/maven-test' } // For other public verify binaries
+        maven { url 'https://build.shibboleth.net/nexus/content/repositories/releases' }
         jcenter()
     }
     else {
@@ -45,7 +47,7 @@ repositories {
 }
 
 ext {
-    opensaml = '3.3.0'
+    opensaml = '3.4.0'
 }
 
 def dependencyVersions = [
@@ -55,7 +57,7 @@ def dependencyVersions = [
         ida_test_utils: '2.0.0-43',
         ida_dev_pki: '1.1.0-43',
         opensaml_version: "$opensaml",
-        saml_libs_version: "$opensaml-147",
+        saml_libs_version: "$opensaml-163",
         hub_saml: '3.3.0-15582',
         stub_idp_saml: '3.3.0-72'
 ]
@@ -70,7 +72,6 @@ configurations {
     soap
     saml
     saml_test
-    test_deps
     test_deps_compile
 }
 
@@ -108,45 +109,37 @@ dependencies {
             'org.freemarker:freemarker:2.3.27-incubating',
             'org.jsoup:jsoup:1.6.1'
 
-    ida_utils   "uk.gov.ida:common-utils:2.0.0-$dependencyVersions.ida_utils",
-            "uk.gov.ida:rest-utils:2.0.0-$dependencyVersions.ida_utils",
-            "uk.gov.ida:security-utils:2.0.0-$dependencyVersions.ida_utils"
+    ida_utils   'uk.gov.ida:common-utils:2.0.0-' + dependencyVersions.ida_utils,
+            'uk.gov.ida:rest-utils:2.0.0-' + dependencyVersions.ida_utils,
+            'uk.gov.ida:security-utils:2.0.0-' + dependencyVersions.ida_utils
 
-    jade "uk.gov.ida:dropwizard-jade:1.1.4-$dependencyVersions.dropwizard_jade"
+    jade 'uk.gov.ida:dropwizard-jade:1.1.4-' + dependencyVersions.dropwizard_jade
 
-    ida_test_utils "uk.gov.ida:common-test-utils:$dependencyVersions.ida_test_utils"
+    ida_test_utils 'uk.gov.ida:common-test-utils:' + dependencyVersions.ida_test_utils
 
-    saml "org.opensaml:opensaml-core:$dependencyVersions.opensaml_version",
-            "org.opensaml:opensaml-saml-impl:$dependencyVersions.opensaml_version",
-            "uk.gov.ida:saml-extensions:$dependencyVersions.saml_libs_version",
-            "uk.gov.ida:saml-serializers:$dependencyVersions.saml_libs_version",
-            "uk.gov.ida:saml-security:$dependencyVersions.saml_libs_version",
-            "uk.gov.ida:saml-metadata-bindings:$dependencyVersions.saml_libs_version",
-            "uk.gov.ida:stub-idp-saml:$dependencyVersions.stub_idp_saml",
-            "uk.gov.ida:hub-saml:$dependencyVersions.hub_saml",
-            "uk.gov.ida:hub-saml-test-utils:$dependencyVersions.hub_saml"
+    saml 'org.opensaml:opensaml-core:' + dependencyVersions.opensaml_version,
+            'org.opensaml:opensaml-saml-impl:' + dependencyVersions.opensaml_version,
+            'uk.gov.ida:saml-extensions:' + dependencyVersions.saml_libs_version,
+            'uk.gov.ida:saml-serializers:' + dependencyVersions.saml_libs_version,
+            'uk.gov.ida:saml-security:' + dependencyVersions.saml_libs_version,
+            'uk.gov.ida:saml-metadata-bindings:' + dependencyVersions.saml_libs_version,
+            'uk.gov.ida:stub-idp-saml:' + dependencyVersions.stub_idp_saml,
+            'uk.gov.ida:hub-saml:' + dependencyVersions.hub_saml,
+            'uk.gov.ida:hub-saml-test-utils:' + dependencyVersions.hub_saml
 
-    saml_test "uk.gov.ida:saml-metadata-bindings-test:$dependencyVersions.saml_libs_version",
+    saml_test 'uk.gov.ida:saml-metadata-bindings-test:$dependencyVersions.saml_libs_version',
 
             soap('org.apache.ws.commons:ws-commons-util:1.0.1') { transitive = false }
-
-    test_deps 'org.mockito:mockito-core:2.7.6',
-            'junit:junit:4.11',
-            'org.hamcrest:hamcrest-library:1.3',
-            'org.assertj:assertj-joda-time:1.1.0',
-            'org.assertj:assertj-core:1.6.0',
-            "uk.gov.ida:ida-dev-pki:$dependencyVersions.ida_dev_pki"
-
 
     testCompile configurations.ida_test_utils,
             configurations.saml_test,
             configurations.test_deps_compile,
-            "uk.gov.ida:hub-saml:$dependencyVersions.hub_saml",
-            "uk.gov.ida:hub-saml-test-utils:$dependencyVersions.hub_saml",
-            "uk.gov.ida:ida-dev-pki:$dependencyVersions.ida_dev_pki",
+            'uk.gov.ida:hub-saml:' + dependencyVersions.hub_saml,
+            'uk.gov.ida:hub-saml-test-utils:' + dependencyVersions.hub_saml,
+            'uk.gov.ida:ida-dev-pki:' + dependencyVersions.ida_dev_pki,
             'junit:junit:4.11',
             'org.mockito:mockito-core:1.9.5',
-            "io.dropwizard:dropwizard-testing:$dependencyVersions.dropwizard",
+            'io.dropwizard:dropwizard-testing:' + dependencyVersions.dropwizard,
             'org.assertj:assertj-guava:1.1.0',
             'org.assertj:assertj-joda-time:1.1.0'
 
@@ -160,7 +153,7 @@ dependencies {
             }
 
     [
-            "io.dropwizard:dropwizard-testing:$dependencyVersions.dropwizard",
+            'io.dropwizard:dropwizard-testing:' + dependencyVersions.dropwizard,
             'com.thoughtworks.inproctester:jerseytester-htmlunit:1.0.3',
             'com.thoughtworks.inproctester:jerseytester-webdriver:1.0.3',
     ].each { dep ->
