--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ repositories {
 }
 
 ext {
-    opensaml = '3.4.0'
+    opensaml = '3.4.2'
 }
 
 def dependencyVersions = [
@@ -55,11 +55,9 @@ def dependencyVersions = [
         dropwizard:'1.3.8',
         dropwizard_jade:10517,
         ida_test_utils: '2.0.0-43',
-        ida_dev_pki: '1.1.0-43',
+        ida_dev_pki: '1.1.0-37',
         opensaml_version: "$opensaml",
-        saml_libs_version: "$opensaml-163",
-        hub_saml: '3.3.0-15582',
-        stub_idp_saml: '3.3.0-72'
+        saml_libs_version: "$opensaml-201"
 ]
 
 configurations {
@@ -120,25 +118,19 @@ dependencies {
 
     ida_test_utils 'uk.gov.ida:common-test-utils:' + dependencyVersions.ida_test_utils
 
-    saml 'org.opensaml:opensaml-core:' + dependencyVersions.opensaml_version,
+    saml    'org.opensaml:opensaml-core:' + dependencyVersions.opensaml_version,
             'org.opensaml:opensaml-saml-impl:' + dependencyVersions.opensaml_version,
-            'uk.gov.ida:saml-extensions:' + dependencyVersions.saml_libs_version,
-            'uk.gov.ida:saml-serializers:' + dependencyVersions.saml_libs_version,
-            'uk.gov.ida:saml-security:' + dependencyVersions.saml_libs_version,
-            'uk.gov.ida:saml-metadata-bindings:' + dependencyVersions.saml_libs_version,
-            'uk.gov.ida:stub-idp-saml:' + dependencyVersions.stub_idp_saml,
-            'uk.gov.ida:hub-saml:' + dependencyVersions.hub_saml,
-            'uk.gov.ida:hub-saml-test-utils:' + dependencyVersions.hub_saml
+            'uk.gov.ida:saml-lib:' + dependencyVersions.saml_libs_version,
+            'uk.gov.ida:hub-saml:3.4.2-15754',
+            'uk.gov.ida:hub-saml-test-utils:3.4.2-15756'
 
-    saml_test 'uk.gov.ida:saml-metadata-bindings-test:$dependencyVersions.saml_libs_version',
+    saml_test 'uk.gov.ida:saml-test:' + dependencyVersions.saml_libs_version
 
-            soap('org.apache.ws.commons:ws-commons-util:1.0.1') { transitive = false }
+    soap('org.apache.ws.commons:ws-commons-util:1.0.1') { transitive = false }
 
     testCompile configurations.ida_test_utils,
             configurations.saml_test,
             configurations.test_deps_compile,
-            'uk.gov.ida:hub-saml:' + dependencyVersions.hub_saml,
-            'uk.gov.ida:hub-saml-test-utils:' + dependencyVersions.hub_saml,
             'uk.gov.ida:ida-dev-pki:' + dependencyVersions.ida_dev_pki,
             'junit:junit:4.11',
             'org.mockito:mockito-core:2.23.4',
@@ -162,7 +154,8 @@ dependencies {
     ].each { dep ->
         test_deps_compile(dep) { transitive = false }
     }
-            testCompile "com.github.tomakehurst:wiremock-standalone:2.5.0"
+
+    testCompile "com.github.tomakehurst:wiremock-standalone:2.23.2"
 }
 
 sourceSets {
