BAU: Add default test config value and drop Java 8 JDKs on Travis
Set `privateBetaUserAccessRestrictionEnabled` to false by default if value not supplied by config

Author: @CharlesIC

--- a/configuration/local/test-rp.yml
+++ b/configuration/local/test-rp.yml
@@ -87,7 +87,7 @@ javascriptPath: /assets/javascripts
 stylesheetsPath: /assets/stylesheets
 imagesPath: /assets/images
 
-privateBetaUserAccessRestrictionEnabled: ${TEST_RP_PRIVATE_BETA_USER_ACCESS_RESTRICTION_ENABLED}
+privateBetaUserAccessRestrictionEnabled: ${TEST_RP_PRIVATE_BETA_USER_ACCESS_RESTRICTION_ENABLED:-false}
 
 tokenServiceUrl: ${TEST_RP_TOKEN_SERVICE_URL}
 tokenServiceUser: ${TEST_RP_TOKEN_SERVICE_USER}
