AUTO-112: Update to use OpenJDK 11 instead of 8
This change replaces hardcoded truststore passwords with variable names
and remove copyToLib from pre-commit.sh script as it does not exist in
build.gradle file.
Rename the application name from ((env))-test-rp-service to
((env))-test-rp as ((env))-test-rp-service does not exist.

Author: @adityapahuja

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,12 @@
 ---
 applications:
-  - name: ((env))-test-rp-service
+  - name: ((env))-test-rp
     routes:
       - route: ((env))-test-rp.apps.internal
     memory: 1G
     buildpack: java_buildpack
     env:
+      JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
       CONFIG_FILE: /app/test-rp/test-rp.yml
       LOG_PATH: /app/test-rp/logs
       LOG_LEVEL: INFO
@@ -13,7 +14,7 @@ applications:
       TEST_RP_MSA_METADATA_URL: http://((env))-test-rp-msa.apps.internal:8080/matching-service/SAML2/metadata
       METADATA_ENTITY_ID: ((metadata_entity_id))
       TRUSTSTORE_PATH: /app/test-rp/truststores/((truststore_name))
-      TRUSTSTORE_PASSWORD: puppet
+      TRUSTSTORE_PASSWORD: ((truststore_password))
       PRIVATE_BETA_USER_ACCESS_RESTRICTION_ENABLED: ((private_beta))
       SHOULD_SHOW_START_WITH_EIDAS_BUTTON: true
       ENCRYPTION_KEY: ((encryption_key))
