Add configuration for MSA backward compatibility testing
This makes the msaEntityId configurable but defaults it to the normal
value.  We need to configure msaEntityId so we can point at different
MSA instances running different versions of the software.

--- a/configuration/test-rp.yml
+++ b/configuration/test-rp.yml
@@ -33,7 +33,7 @@ allowInsecureMetadataLocation: true
 
 msaMetadataUri: ${TEST_RP_MSA_METADATA_URL}
 
-msaEntityId: http://www.test-rp-ms.gov.uk/SAML2/MD
+msaEntityId: ${MSA_ENTITY_ID:-http://www.test-rp-ms.gov.uk/SAML2/MD}
 hubEntityId: ${METADATA_ENTITY_ID}
 
 forceAuthentication: false
